--- a/index-for_employee.html
+++ b/index-for_employee.html
@@ -31,7 +31,7 @@
 	<form action="submission.html" method="post">
 		<div class="container">
 			<div class="row">
-				<p>1) Please rate the level of <strong>support from management</strong> over the past month</p>
+				<p>1) Please rate the level of <strong>support from management</strong> over the past month.</p>
 				<fieldset required>
 					<div class="control-group">
 						<label for="radio" class="row-1">
@@ -195,7 +195,7 @@
 
 			<div class="row">
 				<fieldset class="dropdown">
-					<p>5) Would you recommend a friend or relative to work for Boston Pizza?</p>
+					<p>5) Would you <strong>recommend a friend or relative</strong> to work for Boston Pizza?</p>
 					<select name="employed" id="">
 						<option value="1" selected="selected">Yes</option>
 						<option value="2">No</option>
@@ -205,17 +205,7 @@
 
 			<div class="row">
 				<fieldset class="dropdown">
-					<p>6) General Comments</p>
-					<select name="employed" id="">
-						<option value="1" selected="selected">Yes</option>
-						<option value="2">No</option>
-					</select>
-				</fieldset>
-			</div>
-
-			<div class="row">
-				<fieldset class="dropdown">
-					<p>7) General Comments</p>
+					<p>6) General Comments:</p>
 					<textarea name="comments" id="" cols="100" rows="5"></textarea>
 				</fieldset>
 			</div>
