--- a/index-for_employer.html
+++ b/index-for_employer.html
@@ -31,7 +31,7 @@
 	<form action="submission.html" method="post">
 		<div class="container">
 			<div class="row">
-				<p>1) Please rate the employee's <strong>punctuality</strong> record for the previous month:</p>
+				<p>1) Please rate the employee's <strong>punctuality</strong> record for the previous month.</p>
 				<fieldset id="punctuality">
 					<div class="control-group">
 						<label for="radio" class="row-1">
@@ -285,11 +285,9 @@
 				</fieldset>
 			</div>
 
-
-
 			<div class="row">
 				<fieldset class="dropdown">
-					<p>Is the employee still working at Boston Pizza? (default setting is "yes")</p>
+					<p>6) Is the employee <strong>still working</strong> at Boston Pizza? (default setting is "yes").</p>
 					<select name="employed" id="">
 						<option value="1" selected="selected">Yes</option>
 						<option value="2">No, resigned with notice</option>
@@ -300,6 +298,12 @@
 				</fieldset>
 			</div>
 
+			<div class="row">
+				<fieldset class="dropdown">
+					<p>7) General Comments:</p>
+					<textarea name="comments" id="" cols="100" rows="5"></textarea>
+				</fieldset>
+			</div>
 
 			<div class="row policy">
 				<p>
