--- a/index-for_employee.html
+++ b/index-for_employee.html
@@ -13,16 +13,12 @@
 
 </head>
 <body>
-	<header>
-		<div class="profile">
-			<img src="images/placeholder.jpg" alt="profile picture">
-				
+	<header class="clearfix">
+		<div class="profile ">				
 			<h1>Boston Pizza</h1>
-			<!-- <p>Line Cook for Boston Pizza</p> -->
 		</div>
 		<div class="welcome">
 			<p><strong>Welcome Back!</strong></p>
-			<p>Line-cook:</p>
 			<p>Evan Brown</p>
 		</div>
 	</header>
