--- a/index-for_employer.html
+++ b/index-for_employer.html
@@ -13,12 +13,10 @@
 
 </head>
 <body>
-	<header>
+	<header class="clearfix">
 		<div class="profile">
-			<img src="images/placeholder.jpg" alt="profile picture">
 				
 			<h1>Joe Smith</h1>
-			<p>Line Cook for Boston Pizza</p>
 		</div>
 		<div class="welcome">
 			<p><strong>Welcome Back!</strong></p>
