the toggled load in

--- a/reports/index.html
+++ b/reports/index.html
@@ -11,35 +11,67 @@
 	<!-- responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body class="clearfix">
-	<div class="left">
-		<h4><strong>Name: </strong>William James</h4>
-		<h4><strong>Customer Account: </strong>12345678</h4>
-		<h4><strong>Customer Since: </strong>May 2006</h4>
-	</div>
-	<div class="right">
-		<h1>Your Flash Score:</h1>
-		<h2>XX</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cum amet rem ab, provident tempore ex quaerat vel, nesciunt deleniti numquam magni hic ratione laboriosam voluptate nisi labore minus quasi.</p>
-	</div>
-	<div class="left">
-		<h3>What's Impacting Your Score</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ea perspiciatis consectetur voluptatum facere nostrum quasi assumenda hic temporibus.</p>
-	</div>
-	<div class="right">
-		<div class="info">
-			<h3>Evaluated based on the following questions:</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit ratione, nesciunt non nobis suscipit vitae repellendus qui iure accusamus ipsum inventore recusandae laboriosam commodi voluptatum incidunt nisi provident tempora nulla!</p>
-			<h3>Employer Comments:</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dolorum, similique cum autem vero. Natus consequatur maiores fugiat harum. Doloremque autem earum illum labore veniam ab harum pariatur! Cum, quibusdam?</p>
+<body>
+	<div class="wrapper">
+		<div class="table">
+			<section class="left">
+				<div class="container">
+					<div class="account">
+						<p><strong>Name: </strong>William James</p>
+						<p><strong>Customer Account: </strong>12345678</p>
+						<p><strong>Customer Since: </strong>May 2006</p>
+					</div>
+					<h3>Employee Score:</h3>
+					<img src="images/current.png" alt="current report">
+				</div>
+				<div class="impact">
+					<h3>What's Impacting Your Score</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ea perspiciatis consectetur voluptatum facere nostrum quasi assumenda hic temporibus.</p>
+				</div>
+				<div class="container">
+					<h3>Previous Score</h3>
+					<img src="images/previous.png" alt="">
+						<div class="download">
+							<button>Download Report as PDF</button>	
+						</div>
+				</div>
+			</section>
+			<section class="right">
+				<div class="container">
+					<h1>Your Flash Score:</h1>
+					<h2>XX</h2>
+					<p>Here are your ratings for puncutality, atitude, customer service, teamwork and competency. Your manager might have provided additional feedback in the comments section below. A colour scheme has been created that helps you identify what areas to focus on for development in your career.</p>
+				</div>
+				<div class="container">
+					<div class="info">
+						<h3>Evaluated based on the following questions:</h3>
+						<ol>
+							<li>
+								Please rate the employee's punctuality record for the previous month. (5 point scale)
+							</li>
+							<li>
+								Please rate the employee's customer service ability. (5 point scale)
+							</li>
+							<li>
+								How frequently does the employee display a positive, "can do" attitude? (5 point scale)
+							</li>
+							<li>
+								Please describe the employees teamwork ability. (5 point scale)
+							</li>
+							<li>
+								The employee's effectiveness and competency (5 point scale)
+							</li>
+						</ol>
+						<h3>Employer Comments:</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dolorum, similique cum autem vero. Natus consequatur maiores fugiat harum. Doloremque autem earum illum labore veniam ab harum pariatur! Cum, quibusdam?</p>
+					</div> <!-- info -->
+				</div>
+				<div class="container">
+					<h3>How can I correct this report?</h3>
+					<h2>gsly85@gmail.com</h2>
+				</div class="container">				
+			</section><!-- right -->
 		</div>
 	</div>
-	<div class="left">
-		<button>Download Report as PDF</button>
-	</div>
-	<footer>
-		<h3>How can I correct this report?</h3>
-		<h2>gary@gmail.com</h2>
-	</footer>
-</body>
-</html>
+	</body>
+	</html>
